Fix badge readability

--- a/src/components/controls/badge/badge.scss
+++ b/src/components/controls/badge/badge.scss
@@ -11,6 +11,7 @@
 
 @media (prefers-color-scheme: dark) {
 	.badge {
+		background-color: rgb(180, 220, 255);
 		color: rgba(0, 0, 0, 0.88);
 	}
 }
